--- a/chomper/templates/chomper/googlemaps.html
+++ b/chomper/templates/chomper/googlemaps.html
@@ -4,14 +4,14 @@
 	{% load leaflet_tags %}
 	{% load geojson_tags %}
     <style>
-{#    html, body, #container {#}
-{#      height: 100%;#}
-{#      width: 100%;#}
-{#      overflow: hidden;#}
-{#    }#}
+    body{
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
         .leaflet-container {  /* all maps */
         width:  auto;
-        height: 400px;
+        height: 75vh;
     }
 		.dropdown {
 		max-width: 550px;
@@ -51,7 +51,7 @@
     }
     #sidebar {
       width: 270px;
-      height: 400px;
+      height: 78vh;
       max-width: 100%;
       overflow: auto;
       float: left;
@@ -463,7 +463,7 @@
 
         $("#sidebar-switch-btn").click(function() {
           $("#sidebar").toggle();
-        {#          map.invalidateSize();#}
+                  map.invalidateSize();
         });
 
         function clearHighlight() {
