--- a/chomper/templates/chomper/base.html
+++ b/chomper/templates/chomper/base.html
@@ -73,7 +73,9 @@
 
   <body>
     <nav class="navbar navbar-default" role="navigation" id="myNavbar">
-      <a href="/" class="pull-left"><img src="http://i.imgur.com/B1Da8c5.png" height="60" ></a>
+{#      <a href="/" class="pull-left"><img src="http://i.imgur.com/B1Da8c5.png" height="45" ></a>#}
+        <a href="/" class="pull-left"><img src="http://i.imgur.com/AByvcpZ.png" height="50" ></a>
+
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
