UI tweaks / additions

--- a/chomper/templates/chomper/base.html
+++ b/chomper/templates/chomper/base.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <style>
     .container-fluid{
-      background-color: #48B8D2;
+      background-color: #00BCD6;
     }
     .collapse{
-      background-color: #48B8D2;
+      background-color: #00BCD6;
       color: #FFFFFF;
     }
     .nav.navbar-nav.navbar-right li a {
@@ -24,7 +24,7 @@
     margin-bottom: -10px;
     }
     body{
-      background-color: #48B8D2;
+      background-color: #00BCD6;
     }
   </style>
   <head>
@@ -74,7 +74,7 @@
   <body>
     <nav class="navbar navbar-default" role="navigation" id="myNavbar">
 {#      <a href="/" class="pull-left"><img src="http://i.imgur.com/B1Da8c5.png" height="45" ></a>#}
-        <a href="/" class="pull-left"><img src="http://i.imgur.com/AByvcpZ.png" height="50" ></a>
+        <a href="/" class="pull-left"><img src="http://i.imgur.com/RM57d79.png" class="img-responsive" ></a>
 
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
