--- a/chomper/templates/chomper/googlemaps.html
+++ b/chomper/templates/chomper/googlemaps.html
@@ -70,7 +70,7 @@
         word-wrap: break-word;
     }
 		body {
-    	background-color: #48B8D2;
+    	background-color: #00BCD6;
 	}
     </style>
 
