All sorts of UI tweaks

--- a/chomper/templates/chomper/base.html
+++ b/chomper/templates/chomper/base.html
@@ -74,10 +74,10 @@
   <body>
     <nav class="navbar navbar-default" role="navigation" id="myNavbar">
 {#      <a href="/" class="pull-left"><img src="http://i.imgur.com/B1Da8c5.png" height="45" ></a>#}
-        <a href="/" class="pull-left"><img src="http://i.imgur.com/RM57d79.png" class="img-responsive" ></a>
 
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
+          <a href="/" class="pull-left"><img src="http://i.imgur.com/RM57d79.png" class="img-responsive" width=""></a>
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
