--- a/chomper/templates/chomper/googlemaps.html
+++ b/chomper/templates/chomper/googlemaps.html
@@ -6,6 +6,7 @@
     <style>
     body{
         height: 100vh;
+        max-width: 100vw;
         margin: 0;
         padding: 0;
     }
@@ -48,6 +49,10 @@
         height:50px;
         border:1px solid black;
         display:none;
+    }
+    .row {
+    margin-right: 0px;
+    margin-left: 0px;
     }
     #sidebar {
       width: 270px;
@@ -154,7 +159,7 @@
 {#              </div>#}
 {#            </div>#}
             <div class="sidebar-table">
-	            <table data-toggle="table" class="table table-bordered table-hover table-striped tablesorter sortable">
+	            <table data-toggle="table" id="features" class="table table-bordered table-hover table-striped tablesorter sortable" style="cursor: pointer;">
 	                <thead>
 	                <tr>
 	                <th class="header"> Name <i class="icon-sort"></i></th>
@@ -163,7 +168,7 @@
                     <th class="header" data-sortable="true"> + Time <i class="icon-sort"></i></th>
 	                </tr>
 	            </thead>
-	            <tbody>
+	            <tbody id="the-tbody">
 					{% for key in data %}
 					<tr>
 	                    <td>
@@ -424,6 +429,7 @@
             zoomControl: false
         };
         function map_init (map, options) {
+            markerMap = {}; //a global variable unless you extend L.GeoJSON
 
             var dataurl = '{% url "data" %}';
             // Download GeoJSON via Ajax
@@ -453,33 +459,6 @@
             });
 
 
-
-{##}
-{#                $.getJSON(datapointsurl, function (data) {#}
-{#                    // Add GeoJSON layer#}
-{##}
-{#                    centrallayer = L.geoJson(data, {#}
-{#                        pointToLayer: function (feature, latlng) {#}
-{#                            return L.marker(latlng, {#}
-{#                                icon: L.icon({#}
-{#                                    iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-' + feature.properties.CentColor + '.png',#}
-{#                                    shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',#}
-{#                                    iconSize: [25, 41],#}
-{#                                    iconAnchor: [12, 41],#}
-{#                                    popupAnchor: [1, -34],#}
-{#                                    shadowSize: [41, 41]#}
-{#                                })#}
-{#                            });#}
-{#                        },#}
-{#                        onEachFeature: onEachFeature#}
-{#                    });#}
-{#                    centrallayer.addTo(map);#}
-{##}
-{#                    map.fitBounds(centrallayer.getBounds());#}
-{#                });#}
-{##}
-
-{#            }#}
             var datapointsurl = '{% url "datapoints" %}';
             // Download GeoJSON via Ajax
             $.getJSON(datapointsurl, function (data) {
@@ -487,7 +466,7 @@
 
                 bestlayer = L.geoJson(data, {
                     pointToLayer: function (feature, latlng) {
-                        return L.marker(latlng, {
+                        var marker = L.marker(latlng, {
                             icon: L.icon({
                                 iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-' + feature.properties.Color + '.png',
                                 shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',
@@ -497,9 +476,11 @@
                                 shadowSize: [41, 41]
                             })
                         });
+                        markerMap[feature.properties.name] = marker;
+                        return marker;
                     },
                     onEachFeature: onEachFeature
-                })
+                });
                 centrallayer = L.geoJson(data, {
                     pointToLayer: function (feature, latlng) {
                         return L.marker(latlng, {
@@ -516,64 +497,73 @@
                     onEachFeature: onEachFeature
                 });
 
-                if (symbology == 'Central') {
-                    centrallayer.addTo(map);
-                    var Legend = L.Control.extend({
-                      options: {
-                        position: 'bottomright'
-                      },
 
-                      onAdd: function (map) {
-                        var legend = L.DomUtil.create('div', 'map-legend', L.DomUtil.get('map'));
 
-                        legend.innerHTML = '<h4>Restaurant Points</h4>';
-                        legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png' width='12' height='14'>    Closer to Origin<br />"
-                        legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-violet.png' width='12' height='14'>   Centrally Located<br />"
-                        legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-blue.png' width='12' height='14'>  Closer to Destination<br />"
+                var bestLegend = L.control({position: 'bottomright'});
+                var centralLegend = L.control({position: 'bottomright'});
 
-                        return legend;
-                      }
-                    });
+                bestLegend.onAdd = function (map) {
+                    var legend = L.DomUtil.create('div', 'map-legend', L.DomUtil.get('map'));
 
-                    map.addControl(new Legend());
-                    }
-                else{
-                    bestlayer.addTo(map);
-                    var Legend = L.Control.extend({
-                          options: {
-                            position: 'bottomright'
-                          },
+                                legend.innerHTML = '<h4>Restaurant Points</h4>';
+                                legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png' width='12' height='14'>    Rating > 4.0<br />"
+                                legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-orange.png' width='12' height='14'>   Rating 3.0 - 4.0<br />"
+                                legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png' width='12' height='14'>  Rating < 3.0<br />"
 
-                          onAdd: function (map) {
-                            var legend = L.DomUtil.create('div', 'map-legend', L.DomUtil.get('map'));
+                    return legend;
+                };
+
+                centralLegend.onAdd = function (map) {
+                    var legend = L.DomUtil.create('div', 'map-legend', L.DomUtil.get('map'));
 
                             legend.innerHTML = '<h4>Restaurant Points</h4>';
-                            legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png' width='12' height='14'>    Rating > 4.0<br />"
-                            legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-orange.png' width='12' height='14'>   Rating 3.0 - 4.0<br />"
-                            legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png' width='12' height='14'>  Rating < 3.0<br />"
+                            legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png' width='12' height='14'>    Closer to Origin<br />"
+                            legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-violet.png' width='12' height='14'>   Centrally Located<br />"
+                            legend.innerHTML += "<img src='https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-blue.png' width='12' height='14'>  Closer to Destination<br />"
 
-                            return legend;
-                          }
-                        });
+                    return legend;
+                };
 
-
-
-                        map.addControl(new Legend());
+                if (symbology == 'Central') {
+                    centrallayer.addTo(map);
+                    centralLegend.addTo(map);
                     }
+                else {
+                    bestlayer.addTo(map);
+                    bestLegend.addTo(map);
+                }
 
-                    var baseMaps = {};
-                    var overlayMaps = {
-                        "Symbol by Central Location": centrallayer,
-                        "Symbol by Yelp Rating": bestlayer
-                    };
 
-                    L.control.layers(overlayMaps, baseMaps,{collapsed:false}).addTo(map);
+                var baseMaps = {};
+                var overlayMaps = {
+                    "Symbol by Central Location": centrallayer,
+                    "Symbol by Yelp Rating": bestlayer
+                };
+
+                L.control.layers(overlayMaps, baseMaps,{collapsed:false}).addTo(map);
+
+                map.on('baselayerchange', function (eventLayer) {
+                    // Switch to the Population legend...
+                    if (eventLayer.name === 'Symbol by Central Location') {
+                        map.removeControl(bestLegend);
+                        centralLegend.addTo(map);
+                    } else { // Or switch to the Population Change legend...
+                        map.removeControl(centralLegend);
+                        bestLegend.addTo(map);
+                    }
+                });
 
                 map.fitBounds(bestlayer.getBounds());
                 });
 
+        // Remove a marker
+        $('.remove').on("click", function () {
+            // Remove the marker
+            map.removeLayer(markers[$(this).attr('id')]);
 
-
+            // Remove the link
+            $(this).parent('div').remove();
+        });
 
 
         }
@@ -624,6 +614,7 @@
         $("#reload-map-btn").click(function() {
           map_init();
         });
+
 
         function clearHighlight() {
           highlight.clearLayers();
